--- a/XmlWriter.csproj
+++ b/XmlWriter.csproj
@@ -92,6 +92,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\IniFile.cs" />
     <None Include="Template.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
