CLI機能を強化。-m Xml, Code, All, Listを追加。-m Codeの時はテンプレートをファイルで指定するように修正。 (Antigravity - Gemini 3 Pro)

--- a/XmlWriter.csproj
+++ b/XmlWriter.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AC7EF62A-B75B-4533-AB46-39727364226D}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>XmlWriter</RootNamespace>
     <AssemblyName>XmlWriter</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
